Fix linter errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
+services:
+  - docker
 python:
   - "2.7"
 install:
   - make deps
 script:
+  - make lint
   - make test
-services:
-  - docker
 after_success:
   - make docker_build
