--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,9 @@ install:
 script:
   - make lint
   - make test
-after_success:
   - make docker_build
+  - make docker_push
+services:
+  - docker
+after_success:
+  - make docker_push
