--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ script:
   - make test
   - make docker_build
   - make docker_push
+deploy:
+  provider: heroku
+  app: quiet-crag-45974
+  api_key: $(HEROKU_API_KEY)
